--- a/src/style.css
+++ b/src/style.css
@@ -189,19 +189,18 @@ body {
     body, html {
       min-height: 100%;
       margin: 0;
+      display: flex;
+      flex-direction: column;
     }
     
-    .footer {
-      position: relative;
-      left: 0;
-      width: 100%;
-      bottom: 0;
-      right: 0;
-      text-align: center;
-      padding: 40px 0;
-      background-color: #ebdeb6;
-      color: rgb(12, 12, 12);
-    }
+    /* Footer styles */
+.footer {
+  text-align: center;
+  padding: 20px 0;
+  background-color: #ebdeb6;
+  color: rgb(12, 12, 12);
+  width: 100%; /* Ensure the footer spans the entire width */
+}
     
     @media (max-width: 768px) {
       .footer p {
@@ -228,6 +227,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
     margin-top: 100px; /* Optional: Adjust space between header and form */
+    margin-bottom: 100px;
   }
   @media (max-width: 768px) {
     #form-checkout {
@@ -323,4 +323,11 @@ body {
     display: flex;
     justify-content: center;
   }
+  /* Container for the form and footer */
+.page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1; /* Allows the container to grow and fill available space */
+}
   
